@@ -28,7 +28,15 @@
 #include "../libv4lsyscall-priv.h"
 
 static int autogain_active(struct v4lprocessing_data *data) {
-  return v4lcontrol_get_ctrl(data->control, V4LCONTROL_AUTOGAIN);
+  int autogain;
+
+  autogain = v4lcontrol_get_ctrl(data->control, V4LCONTROL_AUTOGAIN);
+  if (!autogain) {
+    /* Reset last_correction val */
+    data->last_gain_correction = 0;
+  }
+
+  return autogain;
 }
 
 /* auto gain and exposure algorithm based on the knee algorithm described here:
@@ -38,10 +46,10 @@ static int autogain_calculate_lookup_tables(
   unsigned char *buf, const struct v4l2_format *fmt)
 {
   int x, y, target, steps, avg_lum = 0;
-  int gain, exposure, orig_gain, orig_exposure;
+  int gain, exposure, orig_gain, orig_exposure, exposure_low;
   struct v4l2_control ctrl;
   struct v4l2_queryctrl gainctrl, expoctrl;
-  const int deadzone = 8;
+  const int deadzone = 6;
 
   ctrl.id = V4L2_CID_EXPOSURE;
   expoctrl.id = V4L2_CID_EXPOSURE;
@@ -49,6 +57,14 @@ static int autogain_calculate_lookup_tables(
       SYS_IOCTL(data->fd, VIDIOC_G_CTRL, &ctrl))
     return 0;
   exposure = orig_exposure = ctrl.value;
+  /* Determine a value below which we try to not lower the exposure,
+     as most exposure controls tend to jump with big steps in the low
+     range, causing oscilation, so we prefer to use gain when exposure
+     has hit this value */
+  exposure_low = expoctrl.maximum / 10;
+  /* If we have a fine grained exposure control only avoid the last 10 steps */
+  if (exposure_low > 10)
+    exposure_low = 10;
 
   ctrl.id = V4L2_CID_GAIN;
   gainctrl.id = V4L2_CID_GAIN;
@@ -94,22 +110,32 @@ static int autogain_calculate_lookup_tables(
   /* If we are off a multiple of deadzone, do multiple steps to reach the
      desired lumination fast (with the risc of a slight overshoot) */
   target = v4lcontrol_get_ctrl(data->control, V4LCONTROL_AUTOGAIN_TARGET);
-  steps = abs(target - avg_lum) / deadzone;
+  steps = (target - avg_lum) / deadzone;
 
-  for (x = 0; x < steps; x++) {
+  /* If we were decreasing and are now increasing, or vica versa, half the
+     number of steps to avoid overshooting and oscilating */
+  if ((steps > 0 && data->last_gain_correction < 0) ||
+      (steps < 0 && data->last_gain_correction > 0))
+    steps /= 2;
+
+  for (x = 0; x < abs(steps); x++) {
     if (avg_lum > target) {
       if (exposure > expoctrl.default_value)
 	exposure--;
       else if (gain > gainctrl.default_value)
 	gain--;
-      else if (exposure > expoctrl.minimum)
+      else if (exposure > exposure_low)
 	exposure--;
       else if (gain > gainctrl.minimum)
 	gain--;
+      else if (exposure > expoctrl.minimum)
+	exposure--;
       else
 	break;
     } else {
-      if (gain < gainctrl.default_value)
+      if (exposure < exposure_low)
+	exposure++;
+      else if (gain < gainctrl.default_value)
 	gain++;
       else if (exposure < expoctrl.default_value)
 	exposure++;
@@ -121,6 +147,9 @@ static int autogain_calculate_lookup_tables(
 	break;
     }
   }
+
+  if (steps)
+    data->last_gain_correction = steps;
 
   if (gain != orig_gain) {
     ctrl.id = V4L2_CID_GAIN;
